Prion: DDP-5358, linguistic changes: fixed all Hebrew issues

--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/en.json
@@ -151,7 +151,8 @@
         "host": "to host the Registry",
         "analytics": "as an analytics tool"
       },
-      "Last_updated": "Last updated:"
+      "Last_updated": "Last updated: ",
+      "lastUpdatedDate": "8/14/20"
     }
   },
   "Toolkit": {
