--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/he.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/he.json
@@ -1,6 +1,6 @@
 {
   "App": {
-    "Home": "דף בית",
+    "Home": "דף הבית",
     "FAQ": "פרטים נוספים/שאלות נפוצות",
     "About": "אודותינו",
     "Join": "הצטרפו לרשימת הדיוור",
@@ -10,7 +10,7 @@
     },
     "Welcome": {
       "WelcomeTitle": "התנדבו למחקר כדי לעזור במאבק במחלת פריון",
-      "WelcomeText": "הצטרפו ל-Prion Registry, מאגר רישום מקוון לאנשים שנפגעו ממחלת פריון או נמצאים בסיכון לחלות בה, המחפשים הזדמנויות להשתתף במחקר.",
+      "WelcomeText": "הצטרפו ל-Prion Registry, מאגר רישום מקוון לאנשים שנפגעו ממחלת פריון או נמצאים בסיכון לחלות בה, המחפשים הזדמנויות להשתתף במחקרים.",
       "Intro": "הצטרפו אלינו למסע",
       "Closing": "בואו להיות חלק מתנועת מחקר זו. בואו נשנה את העתיד ביחד.",
       "Participate": "איך זה עובד:",
@@ -151,23 +151,24 @@
         "host": "לאחזקת מאגר הרישום",
         "analytics": "ככלי ניתוח נתונים"
       },
-      "Last_updated": "עדכון אחרון:"
+      "Last_updated": "עדכון אחרון: ",
+      "lastUpdatedDate": "14/8/2020"
     }
   },
   "Toolkit": {
     "Common": {
       "Organization": "Prion",
       "LogoAlt": "סמל של Prion Registry",
-      "Home": "דף בית",
+      "Home": "דף הבית",
       "LearnMore": "למידע נוסף",
       "Dashboard": "לוח המחוונים שלי",
       "JoinUs": "הצטרפו אלינו",
       "StudyListing": "רשימת מחקרים"
     },
     "Footer": {
-      "BackToTop": "חזור לראש הדף",
+      "BackToTop": "חזרה לראש הדף",
       "PrivacyPolicy": "מדיניות פרטיות",
-      "ContactUs": "צור קשר:",
+      "ContactUs": "צרו קשר:",
       "ContactMailTo": "mailto:info@prionregistry.org",
       "ContactEmail": "info@prionregistry.org"
     },
@@ -360,16 +361,16 @@
       "Who": {
         "Title": "1. מהו Prion Registry?",
         "Text": {
-          "P1": "Prion Registry הוא מאגר רישום מקוון, המנוהל על ידי מדענים ומסייעים לחולים במחלת פריון במכון ברוד, עבור אנשים שנפגעו ממחלת פריון או נמצאים בסיכון לחלות בה, המחפשים הזדמנויות להשתתף במחקר. המטרה הסופית שלנו היא להמשיך בפיתוחם של טיפולים מצילי חיים כדי לרפא, לטפל, למנוע או לעכב את מחלת הפריון. יצרנו את מאגר הרישום הזה כדי להקל על חולים בפעולות הבאות:",
+          "P1": "Prion Registry הוא מאגר רישום מקוון, המנוהל על ידי מדענים ומסייעים לחולים במחלת פריון במכון ברוד, עבור אנשים שנפגעו ממחלת פריון או נמצאים בסיכון לחלות בה, המחפשים הזדמנויות להשתתף במחקרים. המטרה הסופית שלנו היא להמשיך בפיתוחם של טיפולים מצילי חיים כדי לרפא, לטפל, למנוע או לעכב את מחלת הפריון. יצרנו את מאגר הרישום הזה כדי להקל על חולים בפעולות הבאות:",
           "P2Number": {
             "1": "להיספר,",
             "2": "למצוא מחקרים בהם הם יכולים להשתתף, וכן",
             "3": "לשתף את המידע שלהם עם חוקרים."
           },
           "P3": "מאגר רישום זה יעזור גם לחוקרים מוסמכים בגיוס משתתפים למחקר ובאיסוף מידע. למידע נוסף על Prion Registry, היכנסו אל",
-          "P4Link": "PrionRegistry.org",
+          "P4Link": " PrionRegistry.org ",
           "P5": ". למידע נוסף על מכון ברוד, היכנסו אל",
-          "P6Link": "https://www.broadinstitute.org/about-us",
+          "P6Link": " https://www.broadinstitute.org/about-us",
           "P7": ". ",
           "P8": "לתשומת לבכם, מאגר הרישום עשוי להביא קישורים לאתרי אינטרנט אחרים שאינם קשורים אלינו או לפרויקט המחקר (\"",
           "P9Bold": "אתרי צד שלישי",
@@ -379,7 +380,7 @@
       "Purpose": {
         "Title": "2. מהי המטרה וההיקף של מדיניות זו?",
         "Text": {
-          "P1": "מדיניות זו מתארת את המידע שאנו אוספים ממשתמשים של מאגר הרישום, המטרות לשמן המידע נאסף, כיצד אנו משתמשים במידע זה, ועם מי אנו משתפים אותו.   היא חלה על משתמשים שהם חולים המגויסים לפרויקטי המחקר שלנו (\"",
+          "P1": "היא חלה על משתמשים שהם מטופלים המגויסים לפרויקטי המחקר שלנו (\"משתמשים משתתפים\"),",
           "P2Bold": "משתמשים משתתפים",
           "P3": "\"), ועל משתמשים שאינם מגוייסים לאף פרויקט מחקר ושמשתמשים במאגר הרישום למטרות מידע כללי או מכיוון שהם מעוניינים להשתתף בפרויקט מחקר עתידי (\"",
           "P4Bold": "משתמשים כלליים",
@@ -392,24 +393,24 @@
       },
       "Use": {
         "Title": "3. אם אני משתמש במאגר הרישום, האם אני מסכים למדיניות זו?",
-        "Text": "כן.  עם זאת, השימוש שלכם ומתן המידע למאגר הרישום נעשים בהתנדבות בלבד ויש לכם זכויות מסוימות לשלוט בשימוש שנעשה במידע שלכם, כמתואר להלן.   אם תחליטו להשתמש במאגר הרישום, אתם מסכימים לכך שנוכל להשתמש במידע שלכם כמתואר במדיניות זו."
+        "Text": "כן.  עם זאת, השימוש שלכם ומתן המידע למאגר הרישום נעשים מרצון בלבד ויש לכם זכויות מסוימות לשלוט בשימוש שנעשה במידע שלכם, כמתואר להלן.   אם תחליטו להשתמש במאגר הרישום, אתם מסכימים לכך שנוכל להשתמש במידע שלכם כמתואר במדיניות זו."
       },
       "HowCollect": {
         "Title": "4. כיצד אנו אוספים מכם מידע?",
         "Text": {
           "P1": "אנו אוספים מידע אודותיכם בשני אופנים.",
           "P2": "תחילה, אנו אוספים מידע מסוים מכם",
-          "P3Underline": "כאשר אתם מספקים לנו אותו ישירות.",
+          "P3Underline": " כאשר אתם מספקים לנו אותו ישירות. ",
           "P4": "באופן ספציפי, אנו אוספים מידע עליכם כאשר אתם:",
 
           "P5Underline": "יוצרים חשבון ופרופיל Prion Registry",
-          "P6": "באמצעות אתר האינטרנט שלנו.",
-          "P7Underline": "הצטרפו למאגר הרישום",
+          "P6": " באמצעות אתר האינטרנט שלנו.",
+          "P7Underline": "מצטרפים למאגר הרישום ",
           "P8": " באמצעות מתן מידע עליכם ועל הניסיון שלכם עם מחלת פריון.  לדוגמה, השאלון הרפואי במאגר הרישום שלנו ישאל אתכם סדרה של שאלות על המצב הדמוגרפי שלכם, הסטטוס הנוכחי של מחלת הפריון שלכם, המוכנות שלכם ליצירת קשר מצידנו בנוגע למחקרים, השתתפות קודמת במחקרים, מיקוד ופרטי יצירת קשר.  לתשומת לבכם, אינכם נדרשים לענות על שאלות כלשהן.",
-          "P9Underline": "השיבו להודעות על הזדמנויות למחקר",
-          "P10": ", סקרים והודעות אחרות שאנו עשויים לשלוח לכם.",
-          "P11Underline": "תקשרו איתנו",
-          "P12": "(כגון באמצעות הדוא\"ל).",
+          "P9Underline": "משיבים להודעות על הזדמנויות למחקר",
+          "P10": " , סקרים והודעות אחרות שאנו עשויים לשלוח לכם.",
+          "P11Underline": "מתקשרים איתנו ",
+          "P12": " (כגון באמצעות הדוא\"ל).",
 
           "P13": "שנית, כאשר אתם נכנסים למאגר הרישום, אנו אוספים מידע באמצעות טכנולוגיות אוטומטיות מסוימות היוצרות ורושמות מידע באופן אוטומטי. לדוגמה:",
 
@@ -421,7 +422,7 @@
         "Title": "5. איזה סוג של מידע אנו אוספים?",
         "Text": {
           "P1BoldUnderline": "מידע אישי",
-          "P2": "מידע אשר בפני עצמו או בשילוב עם מידע אחר עשוי לשמש כדי לזהות, ליצור קשר או לאתר אתכם באופן מיידי.  לדוגמה: שמכם, המיקוד שלכם, סטטוס ההשתתפות שלכם במחקרים וכתובת הדוא\"ל שלכם, הם מידע אישי שאתם עשויים לספק לנו באמצעות השימוש במאגר הרישום.  אם אתם מספקים מידע אישי של מישהו אחר (לדוגמה, אתם שולחים מידע למאגר הרישום עבור מישהו אחר או מספקים פרטים על היסטוריה רפואית משפחתית שעשויה לזהות בן משפחה) עליכם ליידע אותם, במידת האפשר מבחינת כושר הבנתם, על כך שסיפקתם לנו את המידע.  אנו נשתמש במידע אישי זה בהתאם למדיניות זו ולחוקים החלים בלבד.",
+          "P2": ": מידע אשר בפני עצמו או בשילוב עם מידע אחר עשוי לשמש כדי לזהות, ליצור קשר או לאתר אתכם באופן מיידי.  לדוגמה: שמכם, המיקוד שלכם, סטטוס ההשתתפות שלכם במחקרים וכתובת הדוא\"ל שלכם, הם מידע אישי שאתם עשויים לספק לנו באמצעות השימוש במאגר הרישום.  אם אתם מספקים מידע אישי של מישהו אחר (לדוגמה, אתם שולחים מידע למאגר הרישום עבור מישהו אחר או מספקים פרטים על היסטוריה רפואית משפחתית שעשויה לזהות בן משפחה) עליכם ליידע אותם, במידת האפשר מבחינת כושר הבנתם, על כך שסיפקתם לנו את המידע.  אנו נשתמש במידע אישי זה בהתאם למדיניות זו ולחוקים החלים בלבד.",
           "P3BoldUnderline": "מידע רפואי ומידע הקשור למחקר",
           "P4":". השאלון הרפואי במאגר הרישום יבקש מכם מידע על הניסיון שלכם עם מחלת פריון ועל מוכנותכם להשתתף במחקר.",
           "P5BoldUnderline": "פרטי שימוש במאגר הרישום",
@@ -442,9 +443,9 @@
           "P7": "  באפשרותכם לבטל את הסכמתכם לשימוש בקובצי cookie שאינם חיוניים על ידי בחירה ב'דחיית קובצי cookie' או לחיצה על 'ניהול העדפות' בהודעה השואלת האם אתם מאשרים את השימוש בקובצי cookie. קובצי cookie שאינם חיוניים הם אלה המאפשרים לנו לנטר את השימוש באתר ולשפר את האתר, כגון Google Analytics. עם זאת, קובצי cookie אחרים הם חיוניים לתפקודו של האתר, כולל קובצי ה-cookie המאפשרים לכם להישאר מחוברים לאתר בזמן שאתם משתמשים בו. הדרך היחידה לבטל את הסכמתכם לקובצי cookie חיוניים אלה היא לא להצטרף לאתר.",
           "P8": "באפשרותכם גם לראות ולנהל את העדפות קובצי ה-cookie שלכם בלחיצה על הלחצן להלן.",
           "P9Bold": "טכנולוגיות מעקב.",
-          "P10": "  אנו משתמשים במכשירים אוטומטיים, יישומים וכלי ניתוח כגוןGoogle Analytics, כדי להעריך את השימוש במאגר הרישום שלנו ולשפר את חוויית המשתמש והביצועים שלנו.  אנו עשויים גם להשתמש בטכנולוגיות מעקב של צד שלישי, כגון tCell, כדי לזהות קוד זדוני או מתקפות על מאגר הרישום שלנו.  גופים אלה עשויים להשתמש בקובצי cookie ובטכנולוגיות מעקב אחרות כדי לבצע את השירותים שלהם.  איננו משתפים את מידע האישי שלכם עם צדדים שלישיים אלה.",
-          "P11Bold": "אותות אל תעקוב. ",
-          "P12": "אנו מגיבים לאותו אל תעקוב (\"",
+          "P10": "  אנו משתמשים במכשירים אוטומטיים, יישומים וכלי ניתוח כגון Google Analytics, כדי להעריך את השימוש במאגר הרישום שלנו ולשפר את חוויית המשתמש והביצועים שלנו.  אנו עשויים גם להשתמש בטכנולוגיות מעקב של צד שלישי, כגון tCell, כדי לזהות קוד זדוני או מתקפות על מאגר הרישום שלנו.  גופים אלה עשויים להשתמש בקובצי cookie ובטכנולוגיות מעקב אחרות כדי לבצע את השירותים שלהם.  איננו משתפים את מידע האישי שלכם עם צדדים שלישיים אלה.",
+          "P11Bold": " אותות אל תעקוב. ",
+          "P12": "אותות אל תעקוב. אנו מגיבים לאותות אל תעקוב (\"",
           "P13BoldUnderline": "DNT",
           "P14": "\") ברמת הדפדפן באמצעות השבתת טכנולוגיות מעקב אופציונליות כגון Google Analytics, עם זאת איננו משביתים מעקב חיוני לתפקוד אתר האינטרנט, כגון קובצי cookie המאפשרים לכם להישאר מחוברים. למידע נוסף על DNT בקרו ב-",
           "P15Link": "www.allaboutdnt.org",
@@ -456,15 +457,15 @@
         "Title": "6. כיצד אנו משתמשים במידע שלכם?",
         "Text": {
           "P1": "אנו משתמשים בנתונים שלכם למטרות הבאות בלבד:",
-          "P2BoldUnderline": "זיהוי הזדמנויות למחקר.",
+          "P2BoldUnderline": "לזהות הזדמנויות למחקר.",
           "P3": " אנו משתמשים במידע שאתם מספקים על עצמכם, מצבכם הרפואי והחוויות שלכם כדי לזהות הזדמנויות להשתתפותכם במחקר. אם אתם מסכימים, תוכלו לבחור שניצור אתכם קשר בנוגע למחקרים ו/או ניסויים קליניים עתידיים בהם אתם עשויים להימצא מתאימים להשתתף. תוכלו גם לבחור שלא לקבל הזמנות אלה או לסרב להשתתף במחקרים עתידיים. לתשומת לבכם, המחקרים עימם אנו משתפים פעולה מקבלים רק מידע צבור, שאינו ניתן לזיהוי, מהמשתתפים שלנו, אלא אם תחתמו עמם על הסכמה נפרדת למחקר. נתונים צבורים אלה אינם מזהים אתכם באופן אישי.",
-          "P4BoldUnderline": "לספק למאגר הרישום ולתקשר אתכם.",
-          "P5": "אנו, ביחד עם השותפים, הספקים, וספקי השירותים שלנו משתמשים במידע שלכם כדי להפעיל את מאגר הרישום, להשיב לשאלותיכם, ליידע אתכם על הזדמנויות למחקר, לבקש מכם לעדכן בקביעות את הפרופיל והסטטוס הרפואי שלכם ולמטרות תקשורות אחרות.",
+          "P4BoldUnderline": "לספק את מאגר הרישום ולתקשר אתכם.",
+          "P5": " אנו, ביחד עם השותפים, הספקים, וספקי השירותים שלנו משתמשים במידע שלכם כדי להפעיל את מאגר הרישום, להשיב לשאלותיכם, ליידע אתכם על הזדמנויות למחקר, לבקש מכם לעדכן בקביעות את הפרופיל והסטטוס הרפואי שלכם ולמטרות תקשורות אחרות.",
           "P6BoldUnderline": "לבצע ולקדם את המחקר.",
           "P7": " אנו נשתמש במידע שתספקו לנו כדי ליצור סטטיסטיקות תיאוריות צבורות, שאינן מזוהות, כגון מספר האנשים המעוניינים להשתתף במחקר על מחלת פריון באזור גאוגרפי נתון. סטטיסטיקות אלה עשויות לשמש כדי לבצע מחקר, כגון אפיון השכיחות של מחלת פריון, או לקידום מחקר על מחלת פריון, לדוגמה על ידי השגת מימון או שיתוף פעולה. כחלק מעבודה זו אנו עשויים להשתמש במידע שאתם מספקים כדי לאמת את דיוק הנתונים של מאגר הרישום, לפתח פרסומים מדעיים, ולענות על שאלות מוועדות IRB או IEC או מסוכנויות ממשלתיות או רגולטוריות.",
-          "P8BoldUnderline": "להתאים אישית את החוויה שלכם.",
+          "P8BoldUnderline": "להתאים אישית את החוויה שלכם. ",
           "P9": "אנו משתמשים במידע שלכם כדי להתאים את התוכן והמידע שאנו עשויים לשלוח או להציג לכם, כדי להציע התאמה על פי מיקום ועזרה מותאמת אישית ובאופן כללי להתאים אישית את החוויה שלכם בזמן שאתם משתמשים במאגר הרישום.",
-          "P10BoldUnderline": "לפתח ולשפר את מאגר הרישום שלנו.",
+          "P10BoldUnderline": "לפתח ולשפר את מאגר הרישום שלנו. ",
           "P11": "אנו משתמשים במידע שלכם כדי להבטיח שמאגר הרישום שלנו פועל כמצופה, כדי להבין טוב יותר כיצד משתמשים ניגשים ומשתמשים במאגר הרישום שלנו, הן על בסיס אישי והן על בסיס צבור כדי להבין את התכונות המועילות בעיני המשתמשים שלנו, לבצע שינויים במאגר הרישום שלנו, לפתח תכונות ויישומים חדשים ולמטרות מחקר וניתוח אחרות."
         }
       },
@@ -476,9 +477,9 @@
           "P3": "  לאחר הסרת שמכם וכל מידע אחר הניתן לזיהוי מיידי, צוות המחקר עשוי לחלוק סטטיסטיקות בנוגע לנתונים שאינם ניתנים לזיהוי עם חוקרים או ארגונים המעוניינים בהשקת מחקרים. לדוגמה, הצוות עשוי לספק מידע בנוגע למספר האנשים במאגר הרישום המתאימים למחקר מסוים, על בסיס גיל, סטטוס של מוטציות גנטיות, מיקום ו/או מידע אחר. מידע זה יכול לשמש כדי לעזור לתכנן מחקר או להשיג מימון או התחייבויות לשיתוף פעולה. חוקרים מוסמכים שקיבלו אישור מוועדת אתיקה יוכלו גם לפרסם מחקרים לגביהם תעודכנו על התאמתכם. וועדת אתיקה היא קבוצה הבודקת ומנטרת באופן עצמאי בכל המחקרים הקשורים בבני אדם. הוועדה מצייתת לחוקים ולקודי אתיקה מקומיים כדי לוודא שזכויותיהם ורווחתם של האנשים המשתתפים במחקר מוגנות. ",
           "P4Bold": "לאחר מכן תוכלו לבחור אם ליצור קשר עם חוקרים אלה ולשתף אותם בזהותכם כדי להתגייס למחקרים שלהם; החוקרים לא יוכלו לראות באופן ישיר את פרטי הקשר שלכם במאגר הרישום.",
           "P5BoldUnderline": "ספקים וספקי שירות.",
-          "P6": "  אנו משתמשים במגוון ספקים וספקי שירות המסייעים לנו בהגשת מאגר הרישום.  לדוגמה, אנו עשויים להשתמש בספקי צד שלישי כדי לאחסן ולאמת הרשאות חשבון, לאחסן ולנתח יומני מערכת, לשלוח תקשורות דוא\"ל, וכן לצורך אירוח ואחסון מידע הנאסף באמצעות מאגר הרישום שלנו.  ייתכן שנצטרך לשתף את המידע שלך עם ספקים וספקי שירות אלה כדי לאפשר להם לספק לנו שירותים אלה.  ספקי שירות וספקים אלה נדרשים להשתמש במידע שלכם רק כדי לספק לנו את שירותיהם ובאופן התואם למדיניות זו.",
+          "P6": "  אנו משתמשים במגוון ספקים וספקי שירות המסייעים לנו בהגשת מאגר הרישום.  לדוגמה, אנו עשויים להשתמש בספקי צד שלישי כדי לאחסן ולאמת הרשאות חשבון, לאחסן ולנתח יומני מערכת, לשלוח תקשורות דוא\"ל, וכן לצורך אירוח ואחסון מידע הנאסף באמצעות מאגר הרישום שלנו.  ייתכן שנצטרך לשתף את המידע שלכם עם ספקים וספקי שירות אלה כדי לאפשר להם לספק לנו שירותים אלה.  ספקי שירות וספקים אלה נדרשים להשתמש במידע שלכם רק כדי לספק לנו את שירותיהם ובאופן התואם למדיניות זו.",
           "P7BoldUnderline": "סיבות משפטיות וסיבות אבטחה.",
-          "P8": "ייתכן שנידרש, על פי חוק, לחשוף את המידע האישי שלכם לצדדים שלישיים, כגון במצבים הבאים:",
+          "P8": " ייתכן שנידרש, על פי חוק, לחשוף את המידע האישי שלכם לצדדים שלישיים, כגון במצבים הבאים:",
           "P9": "במענה לבקשה של גופי אכיפת החוק;",
           "P10": "במענה להליך משפטי, כגון זימון, בקשה לחשיפת מסמכים בהליך אזרחי, או במענה לצו של בית משפט.",
           "P11": "אנו עשויים גם לגשת אל, לשמר ולחשוף את המידע האישי שלכם כדי לאכוף את תנאי השימוש עבור מאגר הרישום ולהגן על הזכויות, הרכוש או הבטיחות שלכם, שלנו או של אחרים.",
@@ -506,7 +507,7 @@
         "Title": "10. אלו זכויות יש לי בנוגע למידע שלי?",
         "Text": {
           "P1": "משתמשים רשומים יכולים לבקש לעדכן, לקבל עותק, או למחוק מידע שנשלח למאגר הרישום בלחיצה על הלחצן להלן:",
-          "P2": "אנו נשיב לכל בקשה של משתמש, ברגע שנוכל לעשות זאת במסגרת הזמן הסביר, ובמסגרת הזמן ובאופן הנדרשים על פי חוק.   אנו עשויים לבקש מכם מידע נוסף כדי לאמת את הבקשה.  ייתכן שלא נוכל להיענות לכל הבקשות: לדוגמה ייתכן שלא נוכל להיענות לבקשת מחיקה אם אנו נדרשים לשמור מידע בכפוף לחוק או למחויבות חוקית או אם המידע משמש כחלק ממחקר שפורסם."
+          "P2": "אנו נשיב לכל בקשה של משתמש, ברגע שנוכל לעשות זאת במסגרת הזמן הסביר, ובמסגרת הזמן ובאופן הנדרשים על פי חוק.   אנו עשויים לבקש מכם מידע נוסף כדי לאמת את הבקשה.  ייתכן שלא נוכל להיענות לכל הבקשות: לדוגמה, ייתכן שלא נוכל להיענות לבקשת מחיקה אם אנו נדרשים לשמור מידע בכפוף לחוק או למחויבות חוקית או אם המידע משמש כחלק ממחקר שפורסם."
         }
       },
       "DataRequest": "בקשת נתונים",
@@ -538,10 +539,10 @@
           "P2Bold": "מכון ברוד",
           "P3": "בדוא\"ל, אל: info@prionregistry.org",
           "P4": "בדואר אל:",
-          "P5": "The Broad Institute of MIT and Harvard",
-          "P6": "415 Main St.",
-          "P7": "Cambridge, MA 02142,",
-          "P8": "United States"
+          "P5": "&#8206;The Broad Institute of MIT and Harvard",
+          "P6": "&#8206;415 Main St.",
+          "P7": "&#8206;Cambridge, MA 02142,",
+          "P8": "&#8206;United States"
         }
       },
       "Update": {
