Prion: DDP-5358, linguistic changes: fixed Hebrew corrections

--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/he.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/he.json
@@ -368,7 +368,7 @@
             "3": "לשתף את המידע שלהם עם חוקרים."
           },
           "P3": "מאגר רישום זה יעזור גם לחוקרים מוסמכים בגיוס משתתפים למחקר ובאיסוף מידע. למידע נוסף על Prion Registry, היכנסו אל",
-          "P4Link": " PrionRegistry.org ",
+          "P4Link": " PrionRegistry.org",
           "P5": ". למידע נוסף על מכון ברוד, היכנסו אל",
           "P6Link": " https://www.broadinstitute.org/about-us",
           "P7": ". ",
@@ -408,8 +408,8 @@
           "P7Underline": "מצטרפים למאגר הרישום ",
           "P8": " באמצעות מתן מידע עליכם ועל הניסיון שלכם עם מחלת פריון.  לדוגמה, השאלון הרפואי במאגר הרישום שלנו ישאל אתכם סדרה של שאלות על המצב הדמוגרפי שלכם, הסטטוס הנוכחי של מחלת הפריון שלכם, המוכנות שלכם ליצירת קשר מצידנו בנוגע למחקרים, השתתפות קודמת במחקרים, מיקוד ופרטי יצירת קשר.  לתשומת לבכם, אינכם נדרשים לענות על שאלות כלשהן.",
           "P9Underline": "משיבים להודעות על הזדמנויות למחקר",
-          "P10": " , סקרים והודעות אחרות שאנו עשויים לשלוח לכם.",
-          "P11Underline": "מתקשרים איתנו ",
+          "P10": ", סקרים והודעות אחרות שאנו עשויים לשלוח לכם.",
+          "P11Underline": " מתקשרים איתנו",
           "P12": " (כגון באמצעות הדוא\"ל).",
 
           "P13": "שנית, כאשר אתם נכנסים למאגר הרישום, אנו אוספים מידע באמצעות טכנולוגיות אוטומטיות מסוימות היוצרות ורושמות מידע באופן אוטומטי. לדוגמה:",
@@ -539,10 +539,10 @@
           "P2Bold": "מכון ברוד",
           "P3": "בדוא\"ל, אל: info@prionregistry.org",
           "P4": "בדואר אל:",
-          "P5": "&#8206;The Broad Institute of MIT and Harvard",
-          "P6": "&#8206;415 Main St.",
-          "P7": "&#8206;Cambridge, MA 02142,",
-          "P8": "&#8206;United States"
+          "P5": "\u200eThe Broad Institute of MIT and Harvard",
+          "P6": ".\u200E415 Main St",
+          "P7": ",\u200ECambridge, MA 02142",
+          "P8": "\u200EUnited States"
         }
       },
       "Update": {
