Translate validation message

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
@@ -310,6 +310,9 @@
     },
     "UserMenu": {
       "SignOutButton": "Abmelden"
+    },
+    "Validators": {
+      "DateNavyValidationRule": "[DE] Entered date is invalid"
     }
   },
   "Toolkit": {
