--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
@@ -511,6 +511,9 @@
       "Assent": {
         "Download": " Download Complete Assent Form"
       }
+    },
+    "Validators": {
+      "DateNavyValidationRule": "Entered date is invalid"
     }
   },
   "Toolkit": {
