--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
@@ -310,6 +310,9 @@
     },
     "UserMenu": {
       "SignOutButton": "Déconnexion"
+    },
+    "Validators": {
+      "DateNavyValidationRule": "[FR] Entered date is invalid"
     }
   },
   "Toolkit": {
