--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
@@ -310,6 +310,9 @@
     },
     "UserMenu": {
       "SignOutButton": "साइन आउट करें"
+    },
+    "Validators": {
+      "DateNavyValidationRule": "[HI] Entered date is invalid"
     }
   },
   "Toolkit": {
