--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -310,6 +310,9 @@
     },
     "UserMenu": {
       "SignOutButton": "Disconnetti"
+    },
+    "Validators": {
+      "DateNavyValidationRule": "[IT] Entered date is invalid"
     }
   },
   "Toolkit": {
