--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
@@ -310,6 +310,9 @@
     },
     "UserMenu": {
       "SignOutButton": "Oturumu Kapat"
+    },
+    "Validators": {
+      "DateNavyValidationRule": "[TR] Entered date is invalid"
     }
   },
   "Toolkit": {
