--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
@@ -71,15 +71,15 @@
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:bsa35@case.edu\" ><strong>Brian Appleby</strong></a>",
           "site": "University Hospitals Cleveland Medical Center, Cleveland, Ohio, Estados Unidos.",
           "eligibilityRequirements": "Las personas con sospecha de enfermedad priónica y al menos un estudio de diagnóstico indicativo de la enfermedad (por ejemplo, resonancia magnética del líquido cefalorraquídeo, del cerebro o electroencefalograma, O bien portadores de una mutación causante de enfermedades priónicas que no tienen síntomas).",
-          "moreInfo":  "Comuníquese con Fran Lissemore (216-464-6203, fml2@case.edu) para obtener más información."
+          "moreInfo": "Comuníquese con Fran Lissemore (216-464-6203, fml2@case.edu) para obtener más información."
         },
         {
           "studyName": "Biomarcadores en portadores de mutaciones presintomáticos",
-          "description":"Nuestro objetivo es sentar las bases para probar futuros tratamientos de las enfermedades priónicas en personas con riesgo genético antes de que presenten síntomas. Los posibles voluntarios primero deben mantener una conversación telefónica con el equipo del estudio para responder preguntas, confirmar si pueden participar y recopilar algunos datos de referencia. Para las personas que reúnan los requisitos necesarios y decidan participar, el estudio consiste en dos consultas en Massachusetts General Hospital en Boston, MA, con un intervalo entre las consultas de 8 a 16 semanas. Las consultas del estudio incluirían los siguientes componentes cada 1.5 días: exploración física periódica, cuestionarios sobre salud, punción lumbar, extracción de sangre, estudios por imágenes del cerebro, pruebas cognitivas. Los participantes que reúnan los requisitos recibirán una remuneración y asistencia económica para los gastos de traslado. La participación es estrictamente voluntaria.",
+          "description": "Nuestro objetivo es sentar las bases para probar futuros tratamientos de las enfermedades priónicas en personas con riesgo genético antes de que presenten síntomas. Los posibles voluntarios primero deben mantener una conversación telefónica con el equipo del estudio para responder preguntas, confirmar si pueden participar y recopilar algunos datos de referencia. Para las personas que reúnan los requisitos necesarios y decidan participar, el estudio consiste en dos consultas en Massachusetts General Hospital en Boston, MA, con un intervalo entre las consultas de 8 a 16 semanas. Las consultas del estudio incluirían los siguientes componentes cada 1.5 días: exploración física periódica, cuestionarios sobre salud, punción lumbar, extracción de sangre, estudios por imágenes del cerebro, pruebas cognitivas. Los participantes que reúnan los requisitos recibirán una remuneración y asistencia económica para los gastos de traslado. La participación es estrictamente voluntaria.",
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:searnold@mgh.harvard.edu\" ><strong>Steven Arnold</strong></a>",
           "site": "Massachusetts <br/>General Hospital, Boston,<br/> Massachusetts, Estados Unidos",
           "eligibilityRequirements": "Quizás pueda participar en este estudio si reúne alguna de las siguientes condiciones: <br/><ol><li> tiene antecedentes familiares de enfermedades priónicas genéticas, como enfermedad de Creutzfeldt-Jakob (ECJ), insomnio familiar letal o síndrome de Gerstmann-Sträussler-Scheinker genéticos Nota: no es necesario que conozca su condición genética para participar.</li><li> ha recibido un resultado con valor pronóstico indicativo de que está en riesgo de desarrollar una de las enfermedades anteriores;</li><li> es integrante de una familia con enfermedades priónicas genéticas, aunque usted no está en riesgo;</li><li> desea ofrecerse para participar del grupo de control.</li></ol>Asimismo, los pacientes deben:<dl ><dt>- tener entre 18 y 85 años;</dt><dt>- hablar bien inglés.</dt></dl>",
-          "moreInfo":  "Consulte este <a target=\"_blank\" href=\"{{bucketUrl}}/studies/arnold-2017P000214-flyer.pdf\">PDF</a>, escriba a MGHPrionStudy@partners.org o llame al 617-643-2351 para inscribirse."
+          "moreInfo": "Consulte este <a target=\"_blank\" href=\"{{bucketUrl}}/studies/arnold-2017P000214-flyer.pdf\">PDF</a>, escriba a MGHPrionStudy@partners.org o llame al 617-643-2351 para inscribirse."
         },
         {
           "studyName": "Diagnóstico precoz de enfermedad priónica humana",
@@ -87,7 +87,7 @@
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:mgeschwind@memory.ucsf.edu\" ><strong>Michael Geschwind </strong></a>",
           "site": "Memory and Aging Center, University of California San Francisco (UCSF), San Francisco, California, Estados Unidos",
           "eligibilityRequirements": "Criterios de inclusión: Los pacientes deben ser mayores de 18 años. Deben cumplir con los criterios corregidos de la OMS sobre la ECJ, tener antecedentes familiares de enfermedad priónica humana hereditaria, o antecedentes de deterioro neurológico progresivo causante de demencia o deterioro funcional considerable al cabo de dos años o menos desde el inicio de los síntomas. Se debe contar con un informante que tenga contacto frecuente con el sujeto y pueda brindar información sobre este. Criterios de exclusión: Personas que no puedan realizarse resonancias magnéticas por contraindicación (por ejemplo, usuarios de marcapasos, mujeres embarazadas). Pacientes infectados por el VIH o inmunodeprimidos.",
-          "moreInfo":  "Consulte este <a target=\"_blank\" href=\"{{bucketUrl}}/studies/geschwind-10-04905-consent.pdf\">PDF</a> y comuníquese con Aili Golubjatnikov (415-476-2901 Aili.Golubjatnikov@ucsf.edu) para inscribirse."
+          "moreInfo": "Consulte este <a target=\"_blank\" href=\"{{bucketUrl}}/studies/geschwind-10-04905-consent.pdf\">PDF</a> y comuníquese con Aili Golubjatnikov (415-476-2901 Aili.Golubjatnikov@ucsf.edu) para inscribirse."
         },
         {
           "studyName": "Programa de evaluación teleneurológica de la ECJ",
@@ -95,7 +95,7 @@
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:bsa35@case.edu\" ><strong>Brian Appleby</strong></a>",
           "site": "University Hospitals Cleveland Medical Center, Cleveland, Ohio, Estados Unidos.",
           "eligibilityRequirements": "Personas con sospecha de enfermedad priónica y al menos un estudio de diagnóstico indicativo de la enfermedad (por ejemplo, resonancia magnética del líquido cefalorraquídeo, del cerebro o electroencefalograma).",
-          "moreInfo":  "Comuníquese con la CJD Foundation (800-659-1991, lori@cjdfoundation.org) para obtener más información."
+          "moreInfo": "Comuníquese con la CJD Foundation (800-659-1991, lori@cjdfoundation.org) para obtener más información."
         },
         {
           "studyName": "Anticuerpos terapéuticos de portadores de mutaciones del gen PRNP para combatir las enfermedades priónicas",
@@ -103,7 +103,7 @@
           "nameOfPI": "<a target=\"_blank\" href=\"mailto:adriano.aguzzi@usz.ch\"><strong>Adriano Aguzzi</strong></a>",
           "site": "University of Zurich, Institute of Neuropathology, Zúrich, Suiza",
           "eligibilityRequirements": "Portadores confirmados de mutaciones en el gen PRNP (sintomáticos+asintomáticos), personas de familias con mutaciones del gen PRNP que no conocen la condición del gen PRNP, familiares con el gen PRNP natural de pacientes con mutaciones confirmadas de dicho gen.",
-          "moreInfo":  "Consulte este <a target=\"_blank\" href=\"{{bucketUrl}}/studies/aguzzi-KEK-ZH-Nr-2015-0514-leaflet.pdf\">PDF</a>, comuníquese con Karl Frontzek (Karl.Frontzek@usz.ch) para inscribirse."
+          "moreInfo": "Consulte este <a target=\"_blank\" href=\"{{bucketUrl}}/studies/aguzzi-KEK-ZH-Nr-2015-0514-leaflet.pdf\">PDF</a>, comuníquese con Karl Frontzek (Karl.Frontzek@usz.ch) para inscribirse."
         }
       ],
       "InputPlaceholder": "Filtrar todas las columnas"
@@ -401,7 +401,6 @@
           "P2": "En primer lugar, recopilamos ciertos datos sobre usted",
           "P3Underline": "cuando nos los brinda directamente.",
           "P4": "En particular, recopilamos información sobre usted en las siguientes ocasiones:",
-
           "P5Underline": "Cuando crea una cuenta y un perfil en Prion Registry",
           "P6": "mediante nuestro sitio web.",
           "P7Underline": "Cuando participa en el Registro",
@@ -410,9 +409,7 @@
           "P10": "encuestas y otras comunicaciones que quizás le enviemos.",
           "P11Underline": "Cuando se comunica con nosotros",
           "P12": "(por ejemplo, por correo electrónico).",
-
           "P13": "En segundo lugar, cuando accede a nuestro Registro, recopilamos datos mediante determinadas tecnologías automatizadas que generan y registran datos de forma automática. Por ejemplo:",
-
           "P14": "Cuando visita el sitio web del Registro (ya sea con su computadora o con un dispositivo móvil), recopilamos ciertos datos de forma automática y los almacenamos en archivos de registro. Esa información puede abarcar direcciones IP, el prestador del servicio de Internet, páginas de referencia/salida, marcas de fecha/hora, datos del registro de clics, horas de inicio/cierre de sesión y el tiempo que pasa en el Registro.",
           "P15": "Utilizamos cookies (pequeños archivos de texto enviados a su computadora cada vez que visita el Registro y que son exclusivos para su cuenta o su navegador) con distintos fines, ya sea analizar la frecuencia con la que usa el Registro, dónde accede a él y la actividad que sucede allí. Usamos una combinación de herramientas y servicios automatizados, como Google Analytics y MixPanel, para evaluar y mejorar nuestro Registro.   Además, es posible que usemos tecnologías de seguimiento externas para detectar códigos malintencionados o ataques en el Registro.  Esas entidades pueden usar cookies y otras tecnologías de seguimiento para prestar sus servicios."
         }
@@ -423,7 +420,7 @@
           "P1BoldUnderline": "Información personal:",
           "P2": "Información que, por sí sola o combinada con otros datos, se puede utilizar para conocer su identidad, comunicarse con usted o determinar su ubicación.  Por ejemplo, su nombre, código postal, condición de participación en ensayos y correo electrónico es información personal que puede brindarnos mediante su uso del Registro. Si entrega la información personal de alguien más (por ejemplo, envía al registro información en nombre de otra personas o da detalles de sus antecedentes médicos familiares que podrían servir para identificar a un familiar), debe avisarle, en la medida que lo permitan sus facultades mentales.  Solo usaremos dicha información personal de conformidad con esta política de privacidad y la ley pertinente.",
           "P3BoldUnderline": "Información médica y relacionada con investigaciones:",
-          "P4":". En el cuestionario médico del Registro le pedirán información sobre su experiencia con la enfermedad priónica y su deseo de participar en investigaciones.",
+          "P4": ". En el cuestionario médico del Registro le pedirán información sobre su experiencia con la enfermedad priónica y su deseo de participar en investigaciones.",
           "P5BoldUnderline": "Información sobre el uso del Registro:",
           "P6": "Información relacionada con su uso del Registro, como las páginas que vea, los enlaces en los que haga clic y la duración de su visita.",
           "P7BoldUnderline": "Información sobre dispositivos:",
@@ -794,6 +791,9 @@
         "E.PO_BOX.INTERNATIONAL": "No se puede verificar la casilla postal internacional. Tenga en cuenta que este error puede aparecer en solicitudes satisfactorias."
       }
     },
-    "TooltipAlt": "Información"
+    "TooltipAlt": "Información",
+    "Validators": {
+      "DateNavyValidationRule": "[ES] Entered date is invalid"
+    }
   }
 }
