--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
@@ -607,6 +607,9 @@
     "SubjectPanel": {
       "Link": "العودة إلى البحث عن مشارك",
       "Text": "رمز الدعوة الخاص بمشترك:"
+    },
+    "Validators": {
+      "DateNavyValidationRule": "[AR] Entered date is invalid"
     }
   }
 }
