--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -607,6 +607,9 @@
     "SubjectPanel": {
       "Link": "Return to subject look-up",
       "Text": "Subject Invitation Code: "
+    },
+    "Validators": {
+      "DateNavyValidationRule": "Entered date is invalid"
     }
   }
 }
