--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -607,6 +607,9 @@
     "SubjectPanel": {
       "Link": "Retounen nan rechèch sijè",
       "Text": "Kòd envitasyon sijè a:"
+    },
+    "Validators": {
+      "DateNavyValidationRule": "[HT] Entered date is invalid"
     }
   }
 }
