--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/pt.json
@@ -607,6 +607,9 @@
     "SubjectPanel": {
       "Link": "Voltar a procurar participante",
       "Text": "Código de convite do participante:"
+    },
+    "Validators": {
+      "DateNavyValidationRule": "[PT] Entered date is invalid"
     }
   }
 }
