--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
@@ -607,6 +607,9 @@
     "SubjectPanel": {
       "Link": "Возврат к поиску субъекта",
       "Text": "Код приглашения субъекта:"
+    },
+    "Validators": {
+      "DateNavyValidationRule": "Введена некорректная дата"
     }
   }
 }
