--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/vi.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/vi.json
@@ -607,6 +607,9 @@
     "SubjectPanel": {
       "Link": "Quay về Trang tìm kiếm",
       "Text": "Mã mời:"
+    },
+    "Validators": {
+      "DateNavyValidationRule": "[VI] Entered date is invalid"
     }
   }
 }
