--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -349,6 +349,9 @@
     },
     "UserMenu": {
       "SignOutButton": "Выйти"
+    },
+    "Validators": {
+      "DateNavyValidationRule": "Введена некорректная дата"
     }
   },
   "Toolkit": {
