--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
@@ -560,7 +560,8 @@
     "ActivityActions": {
       "Continue": "es_Continue",
       "Start": "es_Start",
-      "ViewEdit": "es_View / Edit"
+      "View": "es_View",
+      "Edit": "es_Edit"
     },
     "Dashboard": {
       "Actions": "Acciones",
