--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
@@ -560,7 +560,8 @@
     "ActivityActions": {
       "Continue": "fr_Continue",
       "Start": "fr_Start",
-      "ViewEdit": "fr_View / Edit"
+      "View": "fr_View",
+      "Edit": "fr_Edit"
     },
     "Dashboard": {
       "Actions": "Actions",
