--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -560,7 +560,8 @@
     "ActivityActions": {
       "Continue": "it_Continue",
       "Start": "it_Start",
-      "ViewEdit": "it_View / Edit"
+      "View": "it_View",
+      "Edit": "it_Edit"
     },
     "Dashboard": {
       "Actions": "Azioni",
