--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
@@ -560,7 +560,8 @@
     "ActivityActions": {
       "Continue": "pl_Continue",
       "Start": "pl_Start",
-      "ViewEdit": "pl_View / Edit"
+      "View": "pl_View",
+      "Edit": "pl_Edit"
     },
     "Dashboard": {
       "Actions": "Działania",
