--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
@@ -560,7 +560,8 @@
     "ActivityActions": {
       "Continue": "pt_Continue",
       "Start": "pt_Start",
-      "ViewEdit": "pt_View / Edit"
+      "View": "pt_View",
+      "Edit": "pt_Edit"
     },
     "Dashboard": {
       "Actions": "Ações",
