--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -560,7 +560,8 @@
     "ActivityActions": {
       "Continue": "ru_Continue",
       "Start": "ru_Start",
-      "ViewEdit": "ru_View / Edit"
+      "View": "ru_View",
+      "Edit": "ru_Edit"
     },
     "Dashboard": {
       "Actions": "Действия",
