--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
@@ -560,7 +560,8 @@
     "ActivityActions": {
       "Continue": "tr_Continue",
       "Start": "tr_Start",
-      "ViewEdit": "tr_View / Edit"
+      "View": "tr_View",
+      "Edit": "tr_Edit"
     },
     "Dashboard": {
       "Actions": "Eylemler",
